methods.basics.Methods.scala.error
Compilation error:
Methods:10: error: not found: value goAndget
goAndget() 
^